<?xml version="1.0"?>
<package format="2">

  <name>ars_dji_tello_driver_ros</name>
  <version>0.0.1</version>
  <description>ROS metapackage to control a DJI Tello drone</description>

  <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>
  <author email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--all the packages of the suite -->
  <exec_depend>dji_tello_driver_ros</exec_depend>
  <exec_depend>dji_tello_msgs</exec_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
