<?xml version="1.0"?>
<package format="2">
  <name>dji_tello_driver_ros</name>
  <version>0.0.1</version>
  <description>The dji_tello_driver_ros</description>

  <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>
  <author email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dji_tello_msgs</build_depend>
  <build_depend>ars_robot_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>dji_tello_msgs</build_export_depend>
  <build_export_depend>ars_robot_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dji_tello_msgs</exec_depend>
  <exec_depend>ars_robot_msgs</exec_depend>

</package>
